--- a/src/ValueString.csproj
+++ b/src/ValueString.csproj
@@ -5,7 +5,7 @@
     <Title>Value String</Title>
     <AssemblyName>Dawn.ValueString</AssemblyName>
     <Product>Dawn Utils</Product>
-    <Version>1.1.0</Version>
+    <Version>1.1.1</Version>
     <FileVersion>1.0.0</FileVersion>
     <RootNamespace>Dawn</RootNamespace>
     <CodeAnalysisRuleSet>../style/global.ruleset</CodeAnalysisRuleSet>
@@ -18,22 +18,25 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>bin\Release\netstandard2.0\Dawn.ValueString.xml</DocumentationFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <AdditionalFiles Include="../style/stylecop.json" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Dawn.ValueString</PackageId>
     <Authors>Şafak Gür</Authors>
-    <Description>ValueString struct allows you to encapsulate a string and parse it to any type using the existing parsing conventions. It is intended to be used for convenience when there is a need to initialize typed instances from culture-neutral (invariant) strings.</Description>
+    <Description>ValueString allows you to encapsulate an object as a culture-invariant string and parse it to any type that implements the Parse/TryParse pattern.</Description>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/safakgur/value-string</PackageProjectUrl>
     <Copyright>Copyright © 2016 Şafak Gür</Copyright>
     <PackageTags>string parse</PackageTags>
-    <PackageReleaseNotes>TypeConverterAttribute support.</PackageReleaseNotes>
+    <PackageReleaseNotes>Mark StyleCop as a private asset.</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/safakgur/value-string</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
