--- a/src/ValueString.csproj
+++ b/src/ValueString.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <LangVersion>7.1</LangVersion>
     <TargetFrameworks>netstandard2.0;netstandard1.3;netstandard1.0;net45;net35</TargetFrameworks>
     <Title>Value String</Title>
     <AssemblyName>Dawn.ValueString</AssemblyName>
