--- a/src/ValueString.csproj
+++ b/src/ValueString.csproj
@@ -6,7 +6,7 @@
     <Title>Value String</Title>
     <AssemblyName>Dawn.ValueString</AssemblyName>
     <Product>Dawn Utils</Product>
-    <Version>1.3.2</Version>
+    <Version>1.4.0</Version>
     <FileVersion>1.0.0</FileVersion>
     <RootNamespace>Dawn</RootNamespace>
     <CodeAnalysisRuleSet>../style/global.ruleset</CodeAnalysisRuleSet>
@@ -39,7 +39,10 @@
     <PackageProjectUrl>https://github.com/safakgur/value-string</PackageProjectUrl>
     <Copyright>Copyright © 2016 Şafak Gür</Copyright>
     <PackageTags>string parse serialization</PackageTags>
-    <PackageReleaseNotes>Fixed how the value strings are displayed in the debugger variable windows.</PackageReleaseNotes>
+    <PackageReleaseNotes>
+      * Fixed nullable conversions.
+      * Added the ValueString.Of method - this is now the preferred way to create ValueString instances.
+    </PackageReleaseNotes>
     <RepositoryUrl>https://github.com/safakgur/value-string</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
