--- a/src/ValueString.csproj
+++ b/src/ValueString.csproj
@@ -6,7 +6,7 @@
     <Title>Value String</Title>
     <AssemblyName>Dawn.ValueString</AssemblyName>
     <Product>Dawn Utils</Product>
-    <Version>2.0.0</Version>
+    <Version>2.1.0</Version>
     <FileVersion>1.0.0</FileVersion>
     <RootNamespace>Dawn</RootNamespace>
     <CodeAnalysisRuleSet>../style/global.ruleset</CodeAnalysisRuleSet>
@@ -53,12 +53,7 @@
     <PackageProjectUrl>https://github.com/safakgur/value-string</PackageProjectUrl>
     <Copyright>Copyright © 2016 Şafak Gür</Copyright>
     <PackageTags>string parse serialization</PackageTags>
-    <PackageReleaseNotes>
-      * The members that are deprecated in the previous release are removed.
-      * Format overloads now expect curly braces around tokens.
-      * XML serialization format is changed. The value is now stored as an attribute.
-      * Format overloads accept ValueTuple`2 on all targets except .NET Framework 3.5.
-    </PackageReleaseNotes>
+    <PackageReleaseNotes>The assembly no longer has SecurityTransparentAttribute.</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/safakgur/value-string</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
